StarSpan ChangeLog
$Id$


2008-05-15
    - BoxParams: width and height now allow a qualifier; for now, only the "px"
      suffix to indicate units in pixels instead of dataset's units.
      
      
2008-05-08
    - common.h: added def:
        #define RID_colName "RID"
      TODO: Other similar hard-coded values, but in general with a parameterized
      mechanism.
        
    - mini_raster_strip with shapefile creation: --RID option handled; it creates
      "RID" (ie, RID_colName) column if RID option != "none" and puts the value
      accordingly.
    
    - Simplifying parameter handling for traverser: instead of replicating them
      in traverser's own structures/variables, just use the globalOptions structure:
        - boxParams: done
        - bufferParams: done
        - vSelParams: done
        - verbose: done
        - pixelProportion: done
        - skip_invalid_polys: done
        
2008-05-07 (1.0.08)
    - starspan_create_strip(): Explicitly assigning the geoTransform to the 
      generated strips. It uses the geoTransform from the first miniraster but
      sets the origin point to be (0,0). 
      In particular, for the --mini_raster_strip command with shapefile creation,
      this adjustment makes the generated datasets to match properly.
    
    - Since starspan now checks that the projection of the input datasets be
      the same, I converted the polygon shapefile for the current tests to
      match the projection of the raster files:
        cd tests/data/vector
        ogr2ogr -t_srs "+proj=utm +zone=10 +ellps=WGS84 +datum=WGS84 +units=m +no_defs" \
        ply/ply.shp starspan_testply.shp
      Also converted the other shapefiles for future use.
      (cd tests && make) # -> OK
                 
2008-05-01,02
    - Refactoring miniraster strip creation to allow duplicate pixel handling:
      - MiniRasterObserver: no Traverser as a member any more.
      - IntersectionInfo: now includes the traverser.